--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Chat app</h1>
+    <form action="" id="sendmsg">
+        <input type="text" name="message" id="">
+        <button>Send Message</button>
+    </form>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
 </body>
