--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -11,6 +11,7 @@
         <input type="text" name="message" id="">
         <button>Send Message</button>
     </form>
+    <button id="sendLocation">Send Location</button>
     
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
