--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -7,12 +7,29 @@
 </head>
 <body>
     <h1>Chat app</h1>
+
+    <div id="messages"></div>
+
     <form action="" id="sendmsg">
         <input type="text" name="message" id="">
         <button>Send Message</button>
     </form>
     <button id="sendLocation">Send Location</button>
     
+    <script id="messageTemplate" type="text/html">
+        <div>
+            <p>{{createdAt}} - {{message}}</p>
+        </div>
+    </script>
+    <script id="locationTemplate" type="text/html">
+        <div>
+            <p>{{createdAt}} - <a href="{{url}}" target="_blank"> My Location</a></p>
+        </div>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
 </body>
