--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -3,34 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chat App</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
-    <h1>Chat app</h1>
-
-    <div id="messages"></div>
-
-    <form action="" id="sendmsg">
-        <input type="text" name="message" id="">
-        <button>Send Message</button>
-    </form>
-    <button id="sendLocation">Send Location</button>
-    
-    <script id="messageTemplate" type="text/html">
-        <div>
-            <p>{{createdAt}} - {{message}}</p>
+    <div class="centered-form">
+        <div class="centered-form__box">
+            <h1>Join</h1>
+            <form action="/chat.html">
+                <label for="">Display Name</label>
+                <input type="text" name="username" placeholder="Display Name" required id="">
+                <label for="">Room</label>
+                <input type="text" name="room" placeholder="Room" required id="">
+                <button>Join</button>
+            </form>
         </div>
-    </script>
-    <script id="locationTemplate" type="text/html">
-        <div>
-            <p>{{createdAt}} - <a href="{{url}}" target="_blank"> My Location</a></p>
-        </div>
-    </script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script> 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/chat.js"></script>
+    </div>
 </body>
 </html>
