--- a/chat-app/public/chat.html
+++ b/chat-app/public/chat.html
@@ -18,7 +18,7 @@
 
             <div class="compose">
                 <form action="" id="sendmsg">
-                    <input type="text" name="message" placeholder="Messages" id="">
+                    <input type="text" name="message" placeholder="Messages" required autocomplete="off" id="">
                     <button>Send Message</button>
                 </form>
                 <button id="sendLocation">Send Location</button>
@@ -31,7 +31,7 @@
     <script id="messageTemplate" type="text/html">
         <div class="message" >
             <p>
-                <span class="message__name">Some User Name</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p>{{message}}</p>
@@ -40,7 +40,7 @@
     <script id="locationTemplate" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User Name</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p><a href="{{url}}" target="_blank"> My Location</a></p>
